--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,18 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2,
+            "browserTarget": "myApp:build:production"
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "83f7790a-fead-49cc-9658-5896ffb1d8ca"
   }
 }
